0x07-python-test_driven_development/tests/0-add_integer.txt
>>> add_integer = __import__('0-add_integer').add_integer
>>> add_integer(2, 4) 
6   
>>> add_integer(2.5, 2.5) 
4   
>>> add_integer(2.5, 5) 
7   
>>> add_integer(10, 5.5) 
15  
>>> add_integer("12", 4) 
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "C:\Users\USER\Desktop\Alx\alx-higher_level_programming\0x07-python-test_driven_development\0-add_integer.py", line 19, in add_integer
    raise TypeError("a must be an integer")
TypeError: a must be an integer
>>> add_integer(2, "5") 
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "C:\Users\USER\Desktop\Alx\alx-higher_level_programming\0x07-python-test_driven_development\0-add_integer.py", line 21, in add_integer
    raise TypeError("b must be an integer")
TypeError: b must be an integer
>>> a = float("inf")
>>> b = 15
>>> add_integer(a, b) 
Traceback (most recent call last):   
  File "<stdin>", line 1, in <module>
  File "C:\Users\USER\Desktop\Alx\alx-higher_level_programming\0x07-python-test_driven_development\0-add_integer.py", line 23, in add_integer
    a = int(a)
        ^^^^^^
OverflowError: cannot convert float infinity to integer